--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -31,7 +31,7 @@ section
     .side#side1
         clip-path: polygon(0 0, 0% 100%, 100% 100%)
     .side#side2
-        clip-path: polygon(0 0, 100% 0, 100% 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 100%)
 
 .content
     color: #fff
